--- a/lang/lang_en.json
+++ b/lang/lang_en.json
@@ -162,6 +162,7 @@
     "nap": "DAY",
     "hasznalatok": "Number of Uses",
     "nincsJegy": "You have no valid ticket",
+    "vasarlas": "Buy",
 
     
 
