--- a/lang/lang_hu.json
+++ b/lang/lang_hu.json
@@ -159,6 +159,7 @@
     "nap": "NAP",
     "hasznalatok": "Használatok száma",
     "nincsJegy": "Nincs érvényes jegyed",
+    "vasarlas": "Vásárlás",
 
 
 
