--- a/lang/lang_hu.json
+++ b/lang/lang_hu.json
@@ -151,6 +151,7 @@
     "comment7": "fiok.php",
 
     "name": "Igazi Név",
+    "RealNameLabel":"Születéskori Neve",
     "edit": "Szerkesztés",
     "newProfilePic": "Új profilkép",
     "pwChange": "Ha szeretnél jelszót változtatni azt <a id='jelszomodositas' href='?o=jelszomodositasform'>itt</a> teheted meg.",
