--- a/lang/lang_hu.json
+++ b/lang/lang_hu.json
@@ -189,5 +189,17 @@
     "comment8": "jelszomodositasform",
     "oldPw": "Régi jelszó",
     "newPw": "Új jelszó",
-    "save": "Adatok mentése"
+    "save": "Adatok mentése",
+
+
+
+    "comment9": "edzok.php",
+    "elerhetosegek": "Elérhetőségek",
+    "ertekeles": "Értékelés",
+    "ertekelt": "Ez a felhasználó már értékelt",
+    "ertekeld": "Értékeld az edzőt:",
+    "ertekelesBekuldes": "Értékelés beküldése",
+    "jelentkezzItt": "Ha felkeltettem az érdeklődésedet és szeretnéd a segítségemet igénybe venni, jelentkezz itt.",
+    "jelentkezes": "Jelentkezés",
+    "irjEmail": "vagy írj email-t nekem itt." 
 }
