write to us lang switch

--- a/lang/lang_en.json
+++ b/lang/lang_en.json
@@ -75,6 +75,10 @@
     "szponzorok": "Sponsors",
     "partnerek": "Personal Trainers",
     "tovabbgomb": "More info",
+    "irjNekunk": "Write to us",
+    "lepjKapcsolatba": "For questions, feedback, or issues, please send us an email or write here. Don’t hesitate to get in touch!",
+    "uzenetLabel": "Message:",
+    "kuldes": "Send",
 
 
 
