--- a/lang/lang_hu.json
+++ b/lang/lang_hu.json
@@ -74,6 +74,10 @@
     "szponzorok": "Szponzorok",
     "partnerek": "Személyi edzők",
     "tovabbgomb": "Több info",
+    "irjNekunk": "Írj nekünk",
+    "lepjKapcsolatba": "Kérdéseiddel, észrevételekkel és problémákkal kapcsolatban kérlek írj e-mailt vagy írj itt. Ne habozz lépj velünk kapcsolatba!",
+    "uzenetLabel": "Üzenet:",
+    "kuldes": "Küldés",
 
 
     "comment3": "footer.php",
