--- a/lang/lang_en.json
+++ b/lang/lang_en.json
@@ -208,5 +208,12 @@
     "ertekelesBekuldes": "Submit Rating",
     "jelentkezzItt": "If I’ve piqued your interest and you’d like to work with me, sign up here.",
     "jelentkezes": "Application",
-    "irjEmail": "or send me an email here."
+    "irjEmail": "or send me an email here.",
+
+
+
+    "comment10": "edzokall.php",
+    "telefon": "phone number",
+    "vegzettseg": "Qualifications",
+    "tobbInfo": "More information about the trainer"
 }
