uzenofal nagy resze

--- a/lang/lang_hu.json
+++ b/lang/lang_hu.json
@@ -46,6 +46,7 @@
     "hambiGaleria": "Galéria",
     "hambiFaqs": "Gyakran ismételt kérdések",
     "hambiHazirend": "Házirend",
+    "hambiUzenofal": "Üzenőfal",
 
 
 
