--- a/lang/lang_en.json
+++ b/lang/lang_en.json
@@ -47,6 +47,7 @@
     "hambiGaleria": "Gallery",
     "hambiFaqs": "Frequently Asked Questions",
     "hambiHazirend": "House Rules",
+    "hambiUzenofal": "Patch Notes",
 
 
 
