edzo szerkesztes in progress

--- a/lang/lang_en.json
+++ b/lang/lang_en.json
@@ -210,7 +210,7 @@
     "jelentkezzItt": "If I’ve piqued your interest and you’d like to work with me, sign up here.",
     "jelentkezes": "Application",
     "irjEmail": "or send me an email here.",
-
+    "send": "Send",
 
 
     "comment10": "edzokall.php",
