--- a/lang/lang_hu.json
+++ b/lang/lang_hu.json
@@ -207,6 +207,7 @@
     "jelentkezzItt": "Ha felkeltettem az érdeklődésedet és szeretnéd a segítségemet igénybe venni, jelentkezz itt.",
     "jelentkezes": "Jelentkezés",
     "irjEmail": "vagy írj email-t nekem itt.",
+    "send": "Küldés",
 
 
 
