--- a/lang/lang_en.json
+++ b/lang/lang_en.json
@@ -47,7 +47,8 @@
     "hambiGaleria": "Gallery",
     "hambiFaqs": "Frequently Asked Questions",
     "hambiHazirend": "House Rules",
-    "hambiUzenofal": "Message board",
+    "hambiUzenofal": "Patch Notes",
+
 
 
     "comment2": "main.php",
@@ -79,9 +80,7 @@
     "lepjKapcsolatba": "For questions, feedback, or issues, please send us an email or write here. Don’t hesitate to get in touch!",
     "uzenetLabel": "Message:",
     "kuldes": "Send",
-    "termekeink": "Products",
-    "tobbTermek": "See more products",
-    "tovabb": "More",
+
 
 
 
@@ -217,25 +216,5 @@
     "comment10": "edzokall.php",
     "telefon": "phone number",
     "vegzettseg": "Qualifications",
-    "tobbInfo": "More information about the trainer",
-
-
-
-    "comment11": "webshop.php",
-    "kep": "Picture",
-    "nev": "Name",
-    "mennyiseg": "Amount",
-    "kosar": "Cart",
-    "pleaseLogIn": "Please log in to view the contents of your cart.",
-
-
-
-    "comment12": "pagination",
-    "first": "First",
-    "previous": "Previous",
-    "next": "Next",
-    "last": "Last",
-    "showing": "Showing",
-    "of": "of",
-    "pages": "pages"
+    "tobbInfo": "More information about the trainer"
 }
