--- a/lang/lang_en.json
+++ b/lang/lang_en.json
@@ -40,7 +40,7 @@
     "loginBtn": "Login",
     "signupBtn": "Sign Up",
     "logoutBtn": "Logout",
-    "hu": "Hungarian",
+    "hu": "Magyar",
     "en": "English",
     "hambiArak": "Our Prices",
     "hambiEdzok": "Trainers",
@@ -156,7 +156,7 @@
     "pwLeiras": "64 characters long, special characters",
     "birthdateLabel": "Date of Birth",
     "captchaLabel": "Calculate the result:",
-    "elfogadomLabel": "I accept the terms <a href='' class='text-warning'>adawfawfafwfaw</a>",
+    "elfogadomLabel": "I read and accept the <a href='?o=adatvedelem' class='text-warning'>terms of condition</a>",
 
 
 
@@ -249,6 +249,8 @@
     "productName": "Product",
     "amount": "Amount",
     "buy": "Buy",
+
+    "kosarba": "Add to cart",
 
 
 
