Mobil app szekció

--- a/lang/lang_en.json
+++ b/lang/lang_en.json
@@ -253,6 +253,9 @@
     "kosarba": "Add to cart",
 
 
+    "liftzoneapp": "Get the LiftZone Mobile App",
+    "mobilappleiras": "Handle your passes with ease",
+    "appletoltes": "Download APK",
 
 
     "comment13": "felhasznalo_vasarlas.php",
