--- a/lang/lang_hu.json
+++ b/lang/lang_hu.json
@@ -253,6 +253,11 @@
     "kosarba": "Kosárba",
 
 
+    "liftzoneapp": "Töltsd le a LiftZone mobilalkalmazást",
+    "mobilappleiras": "Kezeld a bérleteidet egyszerűen",
+    "appletoltes": "APK letöltése",
+
+
 
     "comment13": "felhasznalo_vasarlas.php",
     "purchases": "Vásárlások",
